Removing unnecessary NEW BOOLEAN invocations