@@ -12,6 +12,22 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ *
+ * ------------------------------------------------------
+ * Updates made after January 1, 2015 are :
+ * Copyright 2015 The Ariah Group, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.kuali.kra.web.filter;
 
@@ -35,19 +51,21 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * A login filter which forwards to a login page that allows for the desired authentication ID and campus code to be entered without the need for a password.
- * Adapted from {@link org.kuali.rice.kew.web.DummyLoginFilter}.
+ * A login filter which forwards to a login page that allows for the desired
+ * authentication ID and campus code to be entered without the need for a
+ * password. Adapted from {@link org.kuali.rice.kew.web.DummyLoginFilter}.
  */
 public class MultiCampusDummyLoginFilter implements Filter {
-    
+
     private String loginPath;
     private boolean showPassword = false;
     private List<CampusContract> campuses;
+
     public void init(FilterConfig config) throws ServletException {
         BusinessObjectService businessObjectService = KraServiceLocator.getService(BusinessObjectService.class);
-        
+
         loginPath = config.getInitParameter("loginPath");
-        showPassword = new Boolean(config.getInitParameter("showPassword"));
+        showPassword = Boolean.valueOf(config.getInitParameter("showPassword"));
         campuses = new ArrayList<CampusContract>(businessObjectService.findAll(CampusBo.class));
         if (loginPath == null) {
             loginPath = "/WEB-INF/jsp/multicampus_dummy_login.jsp";
@@ -69,14 +87,14 @@ public class MultiCampusDummyLoginFilter implements Filter {
                 final String user = request.getParameter("__login_user");
                 final String password = request.getParameter("__login_pw");
                 final String campusCode = request.getParameter("__login_campusCode");
-                
+
                 final String multiCampusUser = multiCampusAuth.getMultiCampusPrincipalName(user, campusCode);
                 if (user != null) {
                     // Very simple password checking. Nothing hashed or encrypted. This is strictly for demonstration purposes only.
-                    final PrincipalContract principal = showPassword ? auth.getPrincipalByPrincipalNameAndPassword(multiCampusUser, password) 
-                                                                : auth.getPrincipalByPrincipalName(multiCampusUser);
+                    final PrincipalContract principal = showPassword ? auth.getPrincipalByPrincipalNameAndPassword(multiCampusUser, password)
+                            : auth.getPrincipalByPrincipalName(multiCampusUser);
                     if (principal == null) {
-                        handleInvalidLogin(request, response);  
+                        handleInvalidLogin(request, response);
                         return;
                     } else {
                         // wrap the request with the remote user
@@ -84,7 +102,7 @@ public class MultiCampusDummyLoginFilter implements Filter {
                         request = new HttpServletRequestWrapper(hsreq) {
                             public String getRemoteUser() {
                                 return multiCampusUser;
-                            } 
+                            }
                         };
                         hsreq.getSession().setAttribute(Constants.USER_CAMPUS_CODE_KEY, campusCode);
                     }
@@ -97,10 +115,10 @@ public class MultiCampusDummyLoginFilter implements Filter {
         }
         chain.doFilter(request, response);
     }
-    
+
     /**
      * Handles and invalid login attempt.
-     *  
+     *
      * @param request the incoming request
      * @param response the outgoing response
      * @throws ServletException if unable to handle the invalid login
